--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,29 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Blocitoff</title>
+  <title>Bloccit</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
-<body>
+  <body>
+      <div class="container">
+        <div class="row clearfix">
+         <div class="col-md-12 column">
+          <ul class="nav nav-tabs">
+           <li ><%= link_to "Blocitoff", root_path %></li>
+           <li ><%= link_to "About", about_path %></li>
+           <div class='pull-right user-info'>
+            <%= link_to "Sign In", "#" %> | 
+            <%= link_to "Sign Up", "#" %>
+           </div>
+         </ul>
 
-<%= yield %>
+        <%= yield %>
 
-</body>
+        </div>
+       </div>
+      </div>
+
+  </body>
 </html>
