--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,10 +14,41 @@
            <li ><%= link_to "Blocitoff", root_path %></li>
            <li ><%= link_to "About", about_path %></li>
            <div class='pull-right user-info'>
-            <%= link_to "Sign In", "#" %> | 
-            <%= link_to "Sign Up", "#" %>
+           <% if current_user %>  
+                <%= image_tag(current_user.avatar.tiny.url) if current_user.avatar? %>                    
+             Hello <%= link_to (current_user.name || current_user.email), edit_user_registration_path %>!  
+             <%= link_to edit_user_registration_path, class: 'btn btn-primary btn-sm' do %>
+              <span class="glyphicon glyphicon-user"></span>
+             <% end %>
+
+             <%= link_to destroy_user_session_path, method: :delete, class: 'btn btn-primary btn-sm' do %>
+              <span class="glyphicon glyphicon-log-out"></span>
+             <% end %>
+
+           <% else %>
+             <%= link_to "Sign In", new_user_session_path %> or 
+             <%= link_to "Sign Up", new_user_registration_path %>
+           <% end %>
            </div>
          </ul>
+
+
+       <% if flash[:notice] %>
+         <div class="alert alert-success">
+           <button type="button" class="close" data-dismiss="alert">&times;</button>
+           <%= flash[:notice] %>
+         </div>
+       <% elsif flash[:error] %>
+         <div class="alert alert-danger">
+           <button type="button" class="close" data-dismiss="alert">&times;</button>
+           <%= flash[:error] %>
+         </div>
+       <% elsif flash[:alert] %>
+         <div class="alert alert-warning">
+           <button type="button" class="close" data-dismiss="alert">&times;</button>
+           <%= flash[:alert] %>
+         </div>
+       <% end %>
 
         <%= yield %>
 
