modify users table

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,5 +1,4 @@
 <h2>Edit <%= resource_name.to_s.humanize %></h2>
-<%= debug current_user %>
 <div class="row">
   <div class="col-md-8">
     <h3>Change email or password</h3>
@@ -36,8 +35,8 @@
     <h3>Edit personal information</h3>
     <%= form_for(current_user) do |f| %>
       <div class="form-group">
-        <%= f.label :name %>
-        <%= f.text_field :name, class: 'form-control', placeholder: "Enter name", autofocus: true %>
+        <%= f.label :username %>
+        <%= f.text_field :username, class: 'form-control', placeholder: "Enter username", autofocus: true %>
       </div>
 
        <% if current_user.avatar? %>
