Create to-do list items

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -16,3 +16,13 @@ body {
   -o-background-size: cover;
   background-size: cover;
 }
+
+#item_name {
+  width: 80%;
+}
+
+.savebtn {
+  float: right;
+  margin-top: -34px;
+  margin-right: 18px;
+}
