--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,18 +1,21 @@
  <% if @list.nil? %>
-   <%= link_to "New To-do List", new_list_path, class: 'btn btn-success' %>
+ <%= link_to "New To-do List", new_list_path, class: 'btn btn-success' %>
  <% end %>
-  <div class="row">
-  <div class="col-md-8">
-    <h1><%= @list.title %></h1>
+ <div class="row">
+  <div class="col-md-3">
   </div>
-  <div class="col-md-4">
+  <div class="col-md-6">
+    <h1 class='text-center'><%= @list.title %></h1>
+  </div>
+  <div class="col-md-3">
     <% unless @list.nil? %>
-      <%= link_to "Edit", edit_list_path(@list), class: 'btn btn-success' %>
+    <%= link_to "Edit List", edit_list_path(@list), class: 'btn btn-success btn-xs' %>
     <% end %>
 
-   <% unless @list.nil? %>
-    <%= link_to "Delete List", [@list], method: :delete, class: 'btn btn-danger', data: { confirm: 'Are you sure you want to delete this list?' } %>
-   <% end %>
+    <% unless @list.nil? %>
+    <%= link_to "Delete List", [@list], method: :delete, class: 'btn btn-danger btn-xs', data: { confirm: 'Are you sure you want to delete this list?' } %>
+    <% end %>
   </div>
-
 </div>
+
+<%= render partial: 'items', locals: {list: @list} %>
