--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
       <div class="container">
         <div class="row clearfix">
          <div class="col-md-12 column">
-          <ul class="nav nav-tabs">
+          <ul class="nav nav-tabs customnav">
            <li ><%= link_to "Blocitoff", root_path %></li>
            <li ><%= link_to "About", about_path %></li>
            <div class='pull-right user-info'>
