--- a/app/views/items/_item.html.erb
+++ b/app/views/items/_item.html.erb
@@ -1,7 +1,8 @@
-<% @list.items.each do |f| %>
-<tr>
-<td><%= f.name %></td>
-<td></td>
-<td></td>
-</tr>
+<% @list.items.each do |item| %>
+  <%= content_tag :tr, id: "item-#{item.id}" do %>
+  <td><%= item.name %></td>
+  <td></td>
+  <td><%= link_to "", [item.list, item], method: :delete, class: 'glyphicon glyphicon-ok', remote: true %></td>
+  </tr>
+  <% end %>
 <% end %>
