--- a/app/views/items/_item.html.erb
+++ b/app/views/items/_item.html.erb
@@ -2,7 +2,7 @@
   <%= content_tag :tr, id: "item-#{item.id}" do %>
   <td><%= item.name %></td>
   <td><%= item.days_left %> </td>
-  <td><%= link_to "", [item.list, item], method: :delete, class: 'glyphicon glyphicon-ok', remote: true %></td>
+  <td><%= link_to "", [item.list, item], method: :delete, class: 'glyphicon glyphicon-unchecked', remote: true %></td>
   </tr>
   <% end %>
 <% end %>
