--- a/app/views/items/destroy.js.erb
+++ b/app/views/items/destroy.js.erb
@@ -1,5 +1,6 @@
 <% if @item.destroyed? %>
-  $('#item-' +<%= @item.id %>).fadeOut( 500, "linear" ); 
+  $('a.glyphicon.glyphicon-unchecked').click(function(){$(this).removeClass('glyphicon-unchecked').addClass('glyphicon-ok');}); 
+  $('#item-' +<%= @item.id %>).fadeOut( 500 ); 
 <% else  %>
   $('#item-' +<%= @item.id %>).prepend("<div class='alert alert-danger'><%= flash[:error] %></div>");
 <% end %>
